<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="@dimen/spacing_150">

  <TextView
    style="@style/TextAppearance.Material3.HeadlineMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_50"
    android:text="@string/app_name"/>

  <TextView
    style="@style/TextAppearance.Material3.BodyMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_200"
    android:text="@string/app_description"/>

  <TextView
    android:id="@+id/fragment_about_version"
    style="@style/TextAppearance.Material3.HeadlineMedium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_200"
    android:layout_marginBottom="@dimen/spacing_200"
    android:autoLink="web"
    android:paddingTop="@dimen/spacing_50"
    android:paddingBottom="@dimen/spacing_50"
    android:text="@string/source_url"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_200"
    android:lineSpacingMultiplier="1.4"
    android:text="@string/dependencies"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:lineSpacingMultiplier="1.4"
    android:text="@string/license_gnu_gpl"/>

</LinearLayout>
